# proof_of_latency

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain  rustfmt.toml
.cargo-husky/hooks/: pre-commit  pre-push
proptest-regressions/vdf/: mod.txt
src/: kokeilings.rs  lib.rs  main.rs  p2p.rs  pol.rs  primality.rs  util.rs
src/p2p/: identity.rs  mod.rs  protocol.rs
src/rsa/: mod.rs
src/vc/: mod.rs  poe.rs
src/vdf/: evaluation.rs  int.rs  mod.rs  proof.rs  util.rs
testground/: manifest.toml
